--- a/pkp-lib/locale/en_US/manager.xml
+++ b/pkp-lib/locale/en_US/manager.xml
@@ -57,8 +57,14 @@
 	<message key="manager.announcementTypes.form.typeNameRequired">An announcement type name is required.</message>
 	<message key="manager.announcementTypes.noneCreated">No announcement types have been created.</message>
 	<message key="manager.announcementTypes.typeName">Announcement Type</message>
+
+	<!-- Publication Process settings -->
 	<message key="manager.publication.submissionStage">Submission</message>
+	<message key="manager.publication.reviewStage">Review</message>
+	<message key="manager.publication.editorialStage">Editorial</message>
+	<message key="manager.publication.productionStage">Production</message>
 	<message key="manager.publication.emails">Emails</message>
+
 	<message key="manager.emails.confirmDelete">Are you sure you want to delete this email template?</message>
 	<message key="manager.emails.confirmReset">Are you sure you want to reset this email template to its default values?</message>
 	<message key="manager.emails.addEmail">Add Email Template</message>
@@ -172,6 +178,12 @@
 	<message key="manager.reviewerSearch.form.interests.instructions">Enter reviewer interests, separated by commas...</message>
 	<message key="manager.roles">Roles</message>
 	<message key="manager.affiliationAndSupport">Sponsor</message>
+	<message key="manager.setup.competingInterests">Competing Interests</message>
+	<message key="manager.setup.competingInterestsDescription">Reviewers will be asked to comply with the competing interests disclosure policy you specify below.</message> <!-- FIXME #6843 (JM): should this just reference reviewers? -->
+	<message key="manager.setup.reviewOptions.numWeeksPerResponse">Time allowed for review completion (weeks)</message>
+	<message key="manager.setup.reviewOptions.neverSendReminder">Never Remind</message>
+	<message key="manager.setup.reviewOptions.remindForInvite">Send a reminder if a reviewer has not responded to a review request within the following time (days):</message>
+	<message key="manager.setup.reviewOptions.remindForSubmit">Send a reminder if a reviewer has not submitted a recommendation within the following time (days):</message>
 	<message key="manager.setup.sponsors">Sponsoring Organizations</message>
 	<message key="manager.setup.sponsors.note">You may add a note describing your sponsor relationship and policy; this will appear with the sponsor list on your About page.</message>
 	<message key="manager.setup.contributors.note">You may add a note describing the relationship and policy between you and your sources of support; this will appear with the Sources of Support list on your About page.</message>
