--- a/pkp-lib/locale/en_US/common.xml
+++ b/pkp-lib/locale/en_US/common.xml
@@ -12,6 +12,7 @@
   -->
 
 <locale name="en_US" full_name = "English">
+	<message key="common.publicKnowledgeProject">Public Knowledge Project</message>
 	<message key="about.guidelines">Guides</message>
 	<message key="about.aboutSite">About the Site</message>
 	<message key="about.contact">Contact</message>
