--- a/pkp-lib/locale/en_US/common.xml
+++ b/pkp-lib/locale/en_US/common.xml
@@ -419,6 +419,7 @@
 	<message key="search.typeMethodApproach">Type (method/approach)</message>
 
 	<!-- Common -->
+	<message key="grid.action.toggleHelp">Toggle the display of inline help</message>
 	<message key="grid.action.downloadFile">Download this file</message>
 
 	<message key="context.path">Path</message>
