--- a/ojs/locale/pt_PT/locale.xml
+++ b/ojs/locale/pt_PT/locale.xml
@@ -960,7 +960,7 @@ Idiomas estão disponíveis para download manual no <a href="http://pkp.sfu.ca">
 	<message key="subscriptionManager.institutionalSubscriptions">Subscrições Institucionais</message>
 	<message key="subscriptionManager.subscriptionTypes">Tipos de Subscrições</message>
 	<message key="manager.setup.reviewProcessEmailDescription">Editores encaminham a Revisores o pedido de revisão de submissão anexada ao e-mail. Revisores enviam ao editor via e-mail a sua disponibilidade (ou indisponibilidade), e em seguida a revisão e as suas recomendações. Editores informam a disponibilidade (ou indisponibilidade) do revisor na página de Revisão, para registar as acções, decisões e eventos no sistema, para efeitos de controle e auditoria.</message>
-	<message key="manager.setup.citations">Permitir a autores enviar uma lista formatada de referências (citações) separadamente, como parte da submissão.</message>
+	<message key="manager.setup.citations.enable">Permitir a autores enviar uma lista formatada de referências (citações) separadamente, como parte da submissão.</message>
 	<message key="manager.people.confirmDisable">Desactivar este utilizador? Isto impedirá o acesso ao sistema pelo utilizador.
 
 Pode-se opcionalmente informar o motivo pelo qual está sendo desactivado o registo.</message>
